--- a/G-Shot/Info.plist
+++ b/G-Shot/Info.plist
@@ -32,6 +32,11 @@
 	<true/>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
