--- a/G-Shot/Info.plist
+++ b/G-Shot/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>15</string>
+	<string>16</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
@@ -42,11 +42,11 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>We can</string>
+	<string>אנא אפשר לפרטיות המצלמה לצרף סימן מים</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string></string>
+	<string>אפשר לפרטיות המיקרופון להקליט וידאו עם קול</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>We can</string>
+	<string>נא לאפשר לפרטיות הספרייה לשמור תמונה וסרטון שהושלמו</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
